:lipstick: feature/SRM-125 Fix sidebar link icons aligning

--- a/resources/sass/_sidebar.scss
+++ b/resources/sass/_sidebar.scss
@@ -43,10 +43,8 @@
 
 
 .menu-link {
-    display: block;
     color: rgb(182, 182, 182);
     display: flex;
-    align-items: center;
     padding: 0.9rem 2.5rem;
 
     &:hover, &:focus {
